fix: prevent content from flickering when transitioning between pages

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -59,10 +59,6 @@
 }
 
 @layer components {
-  .badge {
-    @apply relative z-20 block border border-zinc-300 p-1.5 font-mono text-sm uppercase text-zinc-600 hover:border-indigo-600 dark:border-zinc-700/40 dark:text-zinc-400  hover:dark:border-indigo-600 hover:dark:text-indigo-600 sm:p-1 sm:text-xs;
-  }
-
   .active {
     @apply text-indigo-600;
   }
@@ -82,4 +78,9 @@
     margin-right: calc(-50rem / 2 + 100% / 2);
     max-width: 50rem;
   }
+}
+
+/* prevent content flickering when transitioning between pages */
+.js .js-animate-content > * {
+  opacity: 0;
 }
